Located last reference to erroneous person

--- a/PersonalWebpage/index.html
+++ b/PersonalWebpage/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Jason Colobong</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -95,7 +95,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Full Stack Web Developer.</h3>
             <p class="fst-italic">
-              Creating Webpages, Data Management, Programming, and being able to tie it all together. I can bring an employer the skills needed to assist with a project at many stages throughout it's development life cycle. 
+              Creating Webpages, Data Management, Programming, being able to tie it all together. I can bring an employer the skills needed to assist with a project at many stages throughout it's development life cycle. 
             </p>
             <div class="row">
               <div class="col-lg-6">
