Added Storefront page, updated details page. Changed links to reflect new page and updates

--- a/PersonalWebpage/portfolio-details-Storefront.html
+++ b/PersonalWebpage/portfolio-details-Storefront.html
@@ -117,16 +117,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: C#, Logic and Creativity</li>
+                <li><strong>Category</strong>: SQL, Database Creation</li>
                 <!--<li><strong>Client</strong>: </li>-->
                 <li><strong>Project date</strong>: 01 Janurary, 2022</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>C# Text Adventure</h2>
+              <h2>Data Driven Store</h2>
               <p>
-                  This is a Text-Based Adventure game written solely in C#. It was written to obtain practice with various conceps of C#. This will have been the first C# project I had created.
+                  This storefront project was created to showcase a basic concept of a storefront operating a database. The database in this project was created using MS SQL Server Management Studio.
               </p>
             </div>
           </div>
