added style changes and a book schema

--- a/PersonalWebpage/index.html
+++ b/PersonalWebpage/index.html
@@ -441,7 +441,7 @@
                                 <p>
                                     <img src="assets/img/classmates/AndrewAllen.jpg" class="img-fluid" alt="Andrew Allen profile photo">
                                     <a href="assets/img/classmates/AndrewAllen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Andrew Allen"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.double-a-dev.com" title="Andrew Allen - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.double-a-dev.com" title="Andrew Allen - Developer" target="_blank"><i class="bx bx-link" target="_blank"></i></a>
                                     
                                 </p>
                                 <h3>Andrew Allen</h3>
@@ -454,7 +454,7 @@
                                 <p>
                                     <img src="assets/img/classmates/AbbeyOutain.jpg" class="img-fluid" alt="Abbey Outain Profile Picture">
                                     <a href="assets/img/classmates/AbbeyOutain.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Abbey Outain"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.abbey-outain.com/" title="Abbey Outain - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.abbey-outain.com/" title="Abbey Outain - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Abbey Outain</h3>
                                 <h4>Developer</h4>
@@ -466,7 +466,7 @@
                                 <p>
                                     <img src="assets/img/classmates/DonRichardson.jpg" class="img-fluid" alt="Don Richardson profile photo">
                                     <a href="assets/img/classmates/DonRichardson.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Don Richardson"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.don-richardson.com" title="Don Richardson - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.don-richardson.com" title="Don Richardson - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Don Richardson</h3>
                                 <h4>Developer</h4>
@@ -477,8 +477,8 @@
                             <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                                 <p>
                                     <img src="assets/img/classmates/EricFaith.jpg" class="img-fluid" alt="Eric Faith profile photo">
-                                    <a href="assets/img/classmates/EricFaith.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Don Richardson"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.eric-faith.net" title="Eric Faith - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/classmates/EricFaith.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Eric Faith"><i class="bx bx-plus"></i></a>
+                                    <a href="http://www.eric-faith.net" title="Eric Faith - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Eric Faith</h3>
                                 <h4>Developer</h4>
@@ -489,7 +489,7 @@
                                 <p>
                                     <img src="assets/img/classmates/JanetLester.jpg" class="img-fluid" alt="Janet Lester profile photo">
                                     <a href="assets/img/classmates/JanetLester.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Don Richardson"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.mypersonalsite.jlester-dev.net" title="Janet Lester - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.mypersonalsite.jlester-dev.net" title="Janet Lester - Developer"><i class="bx bx-link" target="_blank"></i></a>
                                 </p>
                                 <h3>Janet Lester</h3>
                                 <h4>Developer</h4>
@@ -501,7 +501,7 @@
                                 <p>
                                     <img src="assets/img/classmates/JoshuaFoley.jpg" class="img-fluid" alt="Joshua Foley profile photo">
                                     <a href="assets/img/classmates/JoshuaFoley.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Joshua Foley"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.joshua-foley.com" title="Joshua Foley - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.joshua-foley.com" title="Joshua Foley - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Joshua Foley</h3>
                                 <h4>Developer</h4>
@@ -513,7 +513,7 @@
                                 <p>
                                     <img src="assets/img/classmates/PatrickStephen.jpg" class="img-fluid" alt="Patrick Stephen profile photo">
                                     <a href="assets/img/classmates/PatrickStephen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Patrick Stephen"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.patrick-stephen.com" title="Patrick Stephen  - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.patrick-stephen.com" title="Patrick Stephen  - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Patrick Stephen</h3>
                                 <h4>Developer</h4>
@@ -525,7 +525,7 @@
                                 <p>
                                     <img src="assets/img/classmates/ScottCashion.jpg" class="img-fluid" alt="Scott Cashion profile photo">
                                     <a href="assets/img/classmates/ScottCashion.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Scott Cashion"><i class="bx bx-plus"></i></a>
-                                    <a href="https://www.scott-cashion.com" title="Scott Cashion - Developer"><i class="bx bx-link"></i></a>
+                                    <a href="http://www.scott-cashion.com" title="Scott Cashion - Developer" target="_blank"><i class="bx bx-link"></i></a>
                                 </p>
                                 <h3>Scott Cashion</h3>
                                 <h4>Developer</h4>
@@ -544,7 +544,7 @@
 
                 <div class="section-title">
                     <h2>Contact</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    <p>If you have an interest in my skillset, please feel free to reach out to me by any of the options presented on this page. </p>
                 </div>
 
                 <div class="row" data-aos="fade-in">
@@ -579,20 +579,20 @@
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label for="name">Your Name</label>
-                                    <input type="text" name="name" class="form-control" id="name" required>
+                                    <input type="text" name="name" placeholder="Full Name" class="form-control" id="name" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="name">Your Email</label>
-                                    <input type="email" class="form-control" name="email" id="email" required>
+                                    <input type="email" class="form-control" placeholder="E-mail" name="email" id="email" required>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="name">Subject</label>
-                                <input type="text" class="form-control" name="subject" id="subject" required>
+                                <input type="text" class="form-control" placeholder="Subject of Message" name="subject" id="subject" required>
                             </div>
                             <div class="form-group">
                                 <label for="name">Message</label>
-                                <textarea class="form-control" name="message" rows="10" required></textarea>
+                                <textarea class="form-control" placeholder="Enter your message" name="message" rows="10" required></textarea>
                             </div>
                             <div class="my-3">
                                 <div class="loading">Loading</div>
