--- a/PersonalWebpage/portfolio-details-RMS.html
+++ b/PersonalWebpage/portfolio-details-RMS.html
@@ -126,7 +126,8 @@
             <div class="portfolio-description">
               <h2>Relational Database - Side Project: Police Records, Inventory, and Training Management</h2>
               <p>
-                  This project is a passion project I am continually working on. While employed within a police department I had many bad experiences with their various records management software suites, from poor quality data intake to slow data output. I am working on solutions to those problems through my own design, specifically aimed at smaller departments with shorter budgets. I am also experiementing with the combination of all pertinent records into a singular database for easier management of the entire department. 
+                  This project is a passion project I am continually working on. While employed as a Police Officer, I had many bad experiences with their various records management software suites, from poor quality data intake to slow data output. I am working on solutions to those problems through my own design, specifically aimed at smaller departments with shorter budgets. I am also experiementing with the combination of all pertinent records into a singular database for easier management of the entire department. 
+                  
               </p>
             </div>
           </div>
