--- a/PersonalWebpage/portfolio-details-Storefront.html
+++ b/PersonalWebpage/portfolio-details-Storefront.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/BookStoreSchema.png" alt="Diagram of Database">
                 </div>
 
               </div>
@@ -126,7 +126,7 @@
             <div class="portfolio-description">
               <h2>Data Driven Store</h2>
               <p>
-                  This storefront project was created to showcase a basic concept of a storefront operating a database. The database in this project was created using MS SQL Server Management Studio.
+                  This storefront project was created to showcase a basic concept of a storefront operating a database. The database in this project was created using MS SQL Server Management Studio and demonstrates a basic inventory system. Not very many products were added to the list as this was to demonstrate a concept, not a full scale operational DB. 
               </p>
             </div>
           </div>
