changed link to GitHub for todo API

--- a/PersonalWebpage/portfolio-details-API.html
+++ b/PersonalWebpage/portfolio-details-API.html
@@ -117,13 +117,13 @@
                 <li><strong>Category</strong>: API, .NET, filters, User Interface</li>
                 <!--<li><strong>Client</strong>: </li>-->
                 <li><strong>Project date</strong>: Feburary 2022</li>
-                <li><strong>Project URL</strong>: <a href="https://todoapi.jason-colobong.com" target="_blank">http://todoapi.jason-colobong.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/IakonaColobong/ToDoAPI" target="_blank">https://github.com/IakonaColobong/ToDoAPI</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>API</h2>
               <p>
-                  This is my first wttempt with creating an API using .NET framework. This used a database from SSMS to provide the datalayer for the user to interact with.
+                  This is my first wttempt with creating an API using .NET framework. This used a database from SSMS to provide the datalayer for the user to interact with. The above link will direct you to the GitHub repository where you will be able to see the code. 
               </p>
             </div>
           </div>
