--- a/PersonalWebpage/portfolio-details-Storefront.html
+++ b/PersonalWebpage/portfolio-details-Storefront.html
@@ -37,137 +37,135 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+    <!-- ======= Mobile nav toggle button ======= -->
+    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
+    <!-- ======= Header ======= -->
+    <header id="header">
+        <div class="d-flex flex-column">
 
-      <div class="profile">
-        <img src="assets/img/classmates/TempProfilePhotoPlaceHolder.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Jason Colobong</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
-          
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <div class="profile">
+                <img src="assets/img/classmates/TempProfilePhotoPlaceHolder.jpg" alt="" class="img-fluid rounded-circle">
+                <h1 class="text-light"><a href="index.html">Jason Colobong</a></h1>
+                <div class="social-links mt-3 text-center">
+                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
+
+                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                </div>
+            </div>
+
+            <nav id="navbar" class="nav-menu navbar">
+                <ul>
+                    <li><a href="http://developer.jason-colobong.com#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                    <li><a href="http://developer.jason-colobong.com#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+                    <li><a href="http://developer.jason-colobong.com#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                    <li><a href="http://developer.jason-colobong.com#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+                    <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
+                    <li><a href="http://developer.jason-colobong.com#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+            </nav><!-- .nav-menu -->
         </div>
-      </div>
+    </header><!-- End Header -->
 
-      <nav id="navbar" class="nav-menu navbar">
-          <ul>
-              <li><a href="http://deveoper.jason-colobong.com#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-              <li><a href="http://developer.jason-colobong.com#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-              <li><a href="http://developer.jason-colobong.com#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-              <li><a href="http://developer.jason-colobong.com#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-              <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
-              <li><a href="http://developer.jason-colobong.com#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
+    <main id="main">
 
-  <main id="main">
+        <!-- ======= Breadcrumbs ======= -->
+        <section id="breadcrumbs" class="breadcrumbs">
+            <div class="container">
 
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Details</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <!--<div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                </div>-->
-
-                <div class="swiper-slide">
-                  <img src="assets/img/storefront.png" alt="Picture of website home page">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2>Portfolio Details</h2>
+                    <ol>
+                        <li><a href="index.html">Home</a></li>
+                        <li>Portfoio Details</li>
+                    </ol>
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/BookStoreSchema.png" alt="Diagram of Database">
+            </div>
+        </section><!-- End Breadcrumbs -->
+        <!-- ======= Portfolio Details Section ======= -->
+        <section id="portfolio-details" class="portfolio-details">
+            <div class="container">
+
+                <div class="row gy-4">
+
+                    <div class="col-lg-8">
+                        <div class="portfolio-details-slider swiper">
+                            <div class="swiper-wrapper align-items-center">
+
+                                <!--<div class="swiper-slide">
+                                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                                </div>-->
+
+                                <div class="swiper-slide">
+                                    <img src="assets/img/storefront.png" alt="Picture of website home page">
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <img src="assets/img/BookStoreSchema.png" alt="Diagram of Database">
+                                </div>
+
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="portfolio-info">
+                            <h3>Project information</h3>
+                            <ul>
+                                <li><strong>Category</strong>: MVC (Model View Controller), .NET Framework, Data</li>
+                                <!--<li><strong>Client</strong>: </li>-->
+                                <li><strong>Project date</strong>: 01 Janurary, 2022</li>
+                                <li><strong>Project URL</strong>: <a href="http://storefront.jason-colobong.com" target="_blank">http://storefront.jason-colobong.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="portfolio-description">
+                            <h2>Data Driven Store</h2>
+                            <p>
+                                This storefront project was created to showcase a basic concept of a storefront operating a database. The database in this project was created using MS SQL Server Management Studio and demonstrates a basic inventory system. Not very many products were added to the list as this was to demonstrate a concept, not a full scale operational DB. This project was worked on in stages to encompass methods learned in static web design, MVC conversion, .NET framework, and data implementation.
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
 
-              </div>
-              <div class="swiper-pagination"></div>
             </div>
-          </div>
+        </section><!-- End Portfolio Details Section -->
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: MVC (Model View Controller), .NET Framework, Data</li>
-                <!--<li><strong>Client</strong>: </li>-->
-                <li><strong>Project date</strong>: 01 Janurary, 2022</li>
-                <li><strong>Project URL</strong>: <a href="http://storefront.jason-colobong.com" target="_blank">http://storefront.jason-colobong.com</a></li>
-              </ul>
+    </main><!-- End #main -->
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright 2022 <strong><span>Jason Colobong</span></strong>
             </div>
-            <div class="portfolio-description">
-              <h2>Data Driven Store</h2>
-              <p>
-                  This storefront project was created to showcase a basic concept of a storefront operating a database. The database in this project was created using MS SQL Server Management Studio and demonstrates a basic inventory system. Not very many products were added to the list as this was to demonstrate a concept, not a full scale operational DB. This project was worked on in stages to encompass methods learned in static web design, MVC conversion, .NET framework, and data implementation. 
-              </p>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
-          </div>
-
         </div>
+    </footer><!-- End  Footer -->
 
-      </div>
-    </section><!-- End Portfolio Details Section -->
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  </main><!-- End #main -->
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/purecounter/purecounter.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
+    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
