corrected typos in text

--- a/PersonalWebpage/index.html
+++ b/PersonalWebpage/index.html
@@ -280,7 +280,7 @@
                             <img src="assets/img/NET.png" class="img-fluid" alt=".NET Logo">
                             <div class="portfolio-links">
                                 <!--<a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>-->
-                                <a href="portfolio-details-API.html" title="API uing .NET"><i class="bx bx-link"></i></a>
+                                <a href="portfolio-details-API.html" title="API using .NET"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
