--- a/PersonalWebpage/index.html
+++ b/PersonalWebpage/index.html
@@ -63,7 +63,7 @@
                     <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
-                    <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                    <li><a href="http://developer.jason-colobong.com/contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
                 </ul>
             </nav><!-- .nav-menu -->
         </div>
@@ -413,7 +413,7 @@
             </div>
         </section><!-- End Testimonials Section -->
         <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
+        <!--<section id="contact" class="contact">
             <div class="container">
 
                 <div class="section-title">
@@ -441,10 +441,10 @@
                                 <i class="bi bi-phone"></i>
                                 <h4>Call:</h4>
                                 <p>(913) 306-2341</p>
-                            </div>
+                            </div>-->
 
                             <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
-                        </div>
+                        <!--</div>
 
                     </div>
 
@@ -480,7 +480,8 @@
                 </div>
 
             </div>
-        </section><!-- End Contact Section -->
+        </section>-->
+    <!-- End Contact Section -->
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
