--- a/PersonalWebpage/Contact.html
+++ b/PersonalWebpage/Contact.html
@@ -107,7 +107,8 @@
                 </div>
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                    <!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">-->  
+                        <form onsubmit="sendEmail(); reset(); return false;">
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label for="name">Your Name</label>
@@ -129,7 +130,7 @@
                         <div class="my-3">
                             <div class="loading">Loading</div>
                             <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
+                            <!--<div class="sent-message">Your message has been sent. Thank you!</div>-->
                         </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                     </form>
@@ -167,6 +168,22 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.gmail.com",
+                Username: "postmaster@jason-colobong.com",
+                Password: "Kanaka01@",
+                To: 'postmaster@jason-colobong.com',
+                From: document.getElementById("email").value,
+                Subject: "This is the subject",
+                Body: "And this is the body"
+            }).then(
+                message => alert(message)
+            );
+        }
+    </script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
