--- a/PersonalWebpage/portfolio-details-Storefront.html
+++ b/PersonalWebpage/portfolio-details-Storefront.html
@@ -64,7 +64,8 @@
                     <li><a href="http://developer.jason-colobong.com#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
                     <li><a href="http://developer.jason-colobong.com/contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-            </nav><!-- .nav-menu -->
+                    <li><a href="~/Content/docs/Jason-Colobong FSWD Resume.pdf" download class="btn btn-primary">Resume Download</a></li>
+</nav><!-- .nav-menu -->
         </div>
     </header><!-- End Header -->
 
