--- a/PersonalWebpage/portfolio-details-HTMLCSS.html
+++ b/PersonalWebpage/portfolio-details-HTMLCSS.html
@@ -63,7 +63,7 @@
                     <li><a href="http://developer.jason-colobong.com#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="http://developer.jason-colobong.com#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
-                    <li><a href="http://developer.jason-colobong.com/contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                    <li><a href="Contact.html"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
                     <li><a href="~/Content/docs/Jason-Colobong FSWD Resume.pdf" download class="btn btn-primary">Resume Download</a></li>
                 </ul>
             </nav><!-- .nav-menu -->
